Added new standard library that will contain my extras, example: iota
- randomDemo now fixed to include standard jp library
- extraLib directory made to include stdjp library
- stdjp currently has iota for converting shorts to a char string and a
function to reverse a string
- stdjp implementation of iota and reverse are based off of the book k&r

--- a/extraLib/Makefile
+++ b/extraLib/Makefile
@@ -1,4 +1,4 @@
-all: librand.a randDemo.elf
+all: libjp.a
 
 CPU             = msp430g2553
 CFLAGS          = -mmcu=${CPU} -Os -I../h
@@ -8,23 +8,17 @@ CC              = msp430-elf-gcc
 AS              = msp430-elf-as
 AR              = msp430-elf-ar
 
-OBJECTS         = rand.o
+OBJECTS         = stdjp.o
 
-librand.a: $(OBJECTS)
+libjp.a: $(OBJECTS)
 	$(AR) crs $@ $^
 
-$(OBJECTS): rand.h
+$(OBJECTS): stdjp.h
 
-install: librand.a
+install: libjp.a
 	mkdir -p ../h ../lib
 	mv $^ ../lib
 	cp *.h ../h
-
-randDemo.elf: randDemo.o librand.a
-	$(CC) $(CFLAGS) $^ -L../lib -lTimer -lLcd -ljp -o $@
-
-load: randDemo.elf
-	mspdebug rf2500 "prog $^"
 
 clean:
 	rm -f *.a *.o *.elf
